css updated. clahkboard se font and navbar colors updated.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello , I'm Ozkan</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <h1>Hello, I'm Oz</h1>
     <p>Welcome to my portfolio site. More content will be added soon..</p>
 </body>
 </html>
