Bungee Hairline has been thickened, and Doto remains in the headings.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ozco Studio</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts - Bungee Hairline ve Doto -->
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
