contact mail adress added.

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,6 @@
     </nav>
 
     <h1>Contact Me</h1>
-    <p>You can reach me at: <strong>your@email.com</strong></p>
+    <p>You can reach me at: <strong>info@ozco.studio</strong></p>
 </body>
 </html>
