Updated h1 font styles on different pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Google Fonts - Bungee Hairline ve Doto -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="home">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -18,5 +18,5 @@
     </nav>
     <h1>Hello, I'm Oz</h1>
     <p>Welcome to my portfolio site. More content will be added soon..</p>
-</body>
+</body class="home">
 </html>
