--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">  
+    <meta name="description" content="Ozco Studio - My personal portfolio website">
+    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
+    <meta name="author" content="Ozkan Comert">
 </head>
 <body>
     <nav>
