--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts - Bungee Hairline ve Doto -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Ozco Studio - My personal portfolio website">
+    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
+    <meta name="author" content="Ozkan Comert">
 </head>
 <body class="home">
     <nav>
