send button updated.

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </div>
 
     <h2>Send Me a Message</h2>
-    <form action="#" method="POST">
+    <form id="contact-form" action="#" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <p id="capsWarning" style="color: red; font-size: 14px; display: none;">⚠ Caps Lock is ON!</p>
