Added motivational quote to homepage

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     </nav>
     <h1>Hello, I'm Oz</h1>
     <p>Welcome to my portfolio site. More content will be added soon..</p>
+    <div class="motivational-quote">
+        <p>"Every line of code is a step toward a smarter world. Keep learning, keep building!"</p>
+    </div>
 </body>
 </html>
