Added some words about me at about section

--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
     </nav>
 
     <h1>About Me</h1>
-    <p>Hello! I'm Ozkan, a technology enthusiast. This page will be updated soon.</p>
+    <p>Hello! I’m Ozkan, a passionate technology enthusiast.</p>
+    <p>This website is my personal space where I experiment, learn, and showcase my projects.</p>
+    <p>I strongly believe in continuous learning and enjoy sharing my progress as I grow and improve.</p>
+    <p>If you’re also passionate about tech and learning, let’s connect and grow together!🚀✨</p>
 </body>
 </html>
