Added and updated footer: Reduced padding and font size

--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
     <div class="motivational-quote">
         <p>"Every line of code is a step toward a smarter world. Keep learning, keep building!"</p>
     </div>
+    <footer>
+        <div class="footer-container">
+            <p>© 2025 Ozco Studio. All rights reserved.</p>
+            <p>
+                <a href="https://github.com/ozcotech" target="_blank">GitHub</a> | 
+                <a href="https://www.linkedin.com/in/özkan-c-55701728/" target="_blank">LinkedIn</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
