--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,19 @@
             <strong>Email:</strong> 
             <a href="mailto:info@ozco.studio" id="email-text">info@ozco.studio</a> 
             <span class="icon-container">
-                <img src="assets/icons/copy-icon.svg" alt="Copy" class="copy-icon" onclick="copyToClipboard('email-text', 'email-copy-msg')">
+                <img src="assets/icons/copy-icon.svg" alt="Copy" class="copy-icon" 
+                    data-target="email-text" data-message="email-copy-msg">
             </span>
             <span id="email-copy-msg" class="copy-message">Copied!</span>
-          </p>
-        <p><strong>GitHub:</strong> 
+        </p>
+        
+        <p>
+            <strong>GitHub:</strong> 
             <a href="https://github.com/ozcotech" target="_blank" id="github-text">github.com/ozcotech</a> 
-            <img src="assets/icons/copy-icon.svg" alt="Copy" class="copy-icon" onclick="copyToClipboard('github-text', 'github-copy-msg')">
+            <span class="icon-container">
+                <img src="assets/icons/copy-icon.svg" alt="Copy" class="copy-icon" 
+                    data-target="github-text" data-message="github-copy-msg">
+            </span>
             <span id="github-copy-msg" class="copy-message">Copied!</span>
         </p>
     </div>
