Added project cards, improved styling, and updated project pages.

--- a/projects.html
+++ b/projects.html
@@ -23,5 +23,29 @@
 
     <h1>My Projects</h1>
     <p>Here are some of my projects. This page will be updated soon.</p>
+    <!-- Projects Cards -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+            <a href="project1.html" class="project-card">
+                <div class="card-content">
+                    <h3>Project One</h3>
+                    <p>Short description of Project One goes here.</p>
+                </div>
+            </a>
+            <a href="project2.html" class="project-card">
+                <div class="card-content">
+                    <h3>Project Two</h3>
+                    <p>Short description of Project Two goes here.</p>
+                </div>
+            </a>
+            <a href="project3.html" class="project-card">
+                <div class="card-content">
+                    <h3>Project Three</h3>
+                    <p>Short description of Project Three goes here.</p>
+                </div>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
