Added descriptions on project cards

--- a/projects.html
+++ b/projects.html
@@ -30,19 +30,19 @@
             <a href="project1.html" class="project-card">
                 <div class="card-content">
                     <h3>Project One</h3>
-                    <p>Short description of Project One goes here.</p>
+                    <p>Personel Portfolio Website.</p>
                 </div>
             </a>
             <a href="project2.html" class="project-card">
                 <div class="card-content">
                     <h3>Project Two</h3>
-                    <p>Short description of Project Two goes here.</p>
+                    <p>Word Document Formatter</p>
                 </div>
             </a>
             <a href="project3.html" class="project-card">
                 <div class="card-content">
                     <h3>Project Three</h3>
-                    <p>Short description of Project Three goes here.</p>
+                    <p>Mediation Fee Calculator</p>
                 </div>
             </a>
         </div>
