Added JSON-based content loading for About section and Organized project structure and updated paths

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Ozco Studio - My personal portfolio website">
     <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
     <meta name="author" content="Ozkan Comert">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -20,11 +21,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
-    <h1>About Me</h1>
-    <p>Hello! I’m Ozkan, a passionate technology enthusiast.</p>
-    <p>This website is my personal space where I experiment, learn, and showcase my projects.</p>
-    <p>I strongly believe in continuous learning and enjoy sharing my progress as I grow and improve.</p>
-    <p>If you’re also passionate about tech and learning, let’s connect and grow together!🚀✨</p>
+    <h1 id="about-title"></h1>
+    <p id="about-content"></p>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
