--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -59,5 +60,6 @@
 
         <button type="submit">Send</button>
     </form>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
