--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Ozco Studio - My personal portfolio website">
     <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
     <meta name="author" content="Ozkan Comert">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="home">
     <nav>
@@ -35,5 +36,6 @@
             </p>
         </div>
     </footer>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
