--- a/project2.html
+++ b/project2.html
@@ -6,6 +6,7 @@
     <title>Project One - Ozco Studio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -31,5 +32,6 @@
             <a href="https://www.linkedin.com/in/özkan-c-55701728/" target="_blank">LinkedIn</a>
         </p>
     </footer>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
