--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Ozco Studio - My personal portfolio website">
     <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
     <meta name="author" content="Ozkan Comert">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -47,5 +48,6 @@
             </a>
         </div>
     </section>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
