--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
         <div class="footer-container">
             <p>© 2025 Ozco Studio. All rights reserved.</p>
             <p>
-                <a href="https://github.com/ozcotech" target="_blank">GitHub</a> | 
-                <a href="https://www.linkedin.com/in/özkan-c-55701728/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/ozcotech" target="_blank">
+                    <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
+                </a>
+                <a href="https://linkedin.com/in/ozcotech" target="_blank">
+                    <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
+                </a>
             </p>
         </div>
     </footer>
