--- a/project2.html
+++ b/project2.html
@@ -28,8 +28,12 @@
     <footer>
         <p>© 2025 Ozco Studio. All rights reserved.</p>
         <p>
-            <a href="https://github.com/ozcotech" target="_blank">GitHub</a> | 
-            <a href="https://www.linkedin.com/in/özkan-c-55701728/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/ozcotech" target="_blank">
+                <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
+            </a>
+            <a href="https://linkedin.com/in/ozcotech" target="_blank">
+                <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
+            </a>
         </p>
     </footer>
     <script src="js/script.js" defer></script>
