--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,19 @@
             </a>
         </div>
     </section>
+    <footer>
+        <div class="footer-container">
+            <p>© 2025 Ozco Studio. All rights reserved.</p>
+            <p>
+                <a href="https://github.com/ozcotech" target="_blank">
+                    <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
+                </a>
+                <a href="https://linkedin.com/in/ozcotech" target="_blank">
+                    <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
+                </a>
+            </p>
+        </div>
+    </footer>
     <script src="js/script.js" defer></script>
 </body>
 </html>
