Updated meta tags, added structured data, and improved logo integration

--- a/index.html
+++ b/index.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Ozco Studio">
+    <meta property="og:description" content="Explore my personal portfolio, where I share my projects, ideas, and tech-related insights!">
+    <meta property="og:image" content="https://ozco.studio/ozco-logo.png">
+    <meta property="og:url" content="https://ozco.studio">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ozco Studio">
+    <meta name="twitter:description" content="Explore my personal portfolio, where I share my projects, ideas, and tech-related insights!">
+    <meta name="twitter:image" content="https://ozco.studio/ozco-logo.png">
+    <meta name="twitter:site" content="@ozcotech">
+    <meta name="twitter:creator" content="@ozcotech">
+    <!-- Schema.org JSON-LD Yapısal Verisi -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Ozco Studio",
+      "url": "https://ozco.studio",
+      "logo": "https://ozco.studio/ozco-logo.png"
+    }
+    </script>
     <title>Ozco Studio</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="ozco-logo.png">
     <!-- Google Fonts - Bungee Hairline ve Doto -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Ozco Studio - My personal portfolio website">
-    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
+    <meta name="description" content="Ozco Studio - Explore my portfolio where I showcase my projects, ideas, and tech-related insights.">
+    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer, Coding, Web Development">
     <meta name="author" content="Ozkan Comert">
     <link rel="stylesheet" href="css/style.css">
 </head>
