Updated project cards, improved projevt detail layout, and added image aligment

--- a/project2.html
+++ b/project2.html
@@ -18,12 +18,14 @@
         </ul>
     </nav>
 
-    <section class="project-detail">
-        <h1>📄 Project Two: </h1>
-        <p>Word Document Formatter</p>
-        <p>✍ Automate document formatting with Python</p>
-        <p>A Python-based project that utilizes the python-docx library to modify and format Word documents efficiently. Future improvements include adding a GUI for user-friendly interactions and integrating a database for managing multiple documents seamlessly.</p>
-    </section>
+    <div class="project-details-container">
+        <img src="assets/projects/project2.png" alt="Word Editor Project" class="project-detail-image">
+        
+        <div class="project-details-text">
+            <h2>Word Document Editor</h2>
+            <p>A Python-based document editor using the python-docx library.</p>
+        </div>
+    </div>
 
     <footer>
         <p>© 2025 Ozco Studio. All rights reserved.</p>
