--- a/project3.html
+++ b/project3.html
@@ -18,12 +18,14 @@
         </ul>
     </nav>
 
-    <section class="project-detail">
-        <h1>⚖ Project Three: </h1>
-        <p>💰 Mediation Fee Calculator</p>
-        <p>💰 Accurate legal calculations for mediation fees</p>
-        <p>This project is a Python-based mediation fee calculator that ensures compliance with legal regulations. It automates complex fee calculations, saving time and reducing errors. Future versions may include a user-friendly interface and real-time legal updates.</p>
-    </section>
+    <div class="project-details-container">
+        <img src="assets/projects/project3.png" alt="Mediation Project" class="project-detail-image">
+        
+        <div class="project-details-text">
+            <h2>Mediation Fee Calculator</h2>
+            <p>A legal fee calculator for mediators, developed in Python.</p>
+        </div>
+    </div>
 
     <footer>
         <p>© 2025 Ozco Studio. All rights reserved.</p>
