added some contents in projects pages.

--- a/project2.html
+++ b/project2.html
@@ -23,7 +23,7 @@
         
         <div class="project-details-text">
             <h2>Word Document Editor</h2>
-            <p>A Python-based document editor using the python-docx library.</p>
+            <p>A Python-based project that utilizes the python-docx library to modify and format Word documents efficiently. Future improvements include adding a GUI for user-friendly interactions and integrating a database for managing multiple documents seamlessly.</p>
         </div>
     </div>
 
