--- a/project3.html
+++ b/project3.html
@@ -23,7 +23,7 @@
         
         <div class="project-details-text">
             <h2>Mediation Fee Calculator</h2>
-            <p>A legal fee calculator for mediators, developed in Python.</p>
+            <p>This project is a Python-based mediation fee calculator that ensures compliance with legal regulations. It automates complex fee calculations, saving time and reducing errors. Future versions may include a user-friendly interface and real-time legal updates.</p>
         </div>
     </div>
 
