Updated JSON-based content loading for project3 page

--- a/about.html
+++ b/about.html
@@ -21,8 +21,12 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- About Text Section -->
     <h1 id="about-title"></h1>
     <p id="about-content"></p>
+
+    <!-- Footer Section -->
     <footer>
         <div class="footer-container">
             <p>© 2025 Ozco Studio. All rights reserved.</p>
