--- a/project3.html
+++ b/project3.html
@@ -22,8 +22,8 @@
         <img src="assets/projects/project3.png" alt="Mediation Project" class="project-detail-image">
         
         <div class="project-details-text">
-            <h2>Mediation Fee Calculator</h2>
-            <p>This project is a Python-based mediation fee calculator that ensures compliance with legal regulations. It automates complex fee calculations, saving time and reducing errors. Future versions may include a user-friendly interface and real-time legal updates.</p>
+            <h2 id="project-title"></h2>
+            <p id="project-content"></p>
         </div>
     </div>
 
