Updated project3.html with enhanced structure, SEO, and styling improvements.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Google Fonts - Bungee Hairline ve Doto -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Ozco Studio - Explore my portfolio where I showcase my projects, ideas, and tech-related insights.">
-    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer, Coding, Web Development">
+    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer, Coding, Web Development, Mediation, Mediation Fee Calculator, Legal Tech, AI-Powered Tools, Artificial Intelligence, Python Development, Legal Automation">
     <meta name="author" content="Ozkan Comert">
     <link rel="stylesheet" href="css/style.css">
 </head>
