--- a/project3.html
+++ b/project3.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Three - Ozco Studio</title>
+
+    <meta name="description" content="An AI-powered mediation fee calculator designed for legal professionals, businesses, and individuals to calculate mediation costs easily and accurately.">
+    <meta name="keywords" content="Mediation, Mediation Fee Calculator, AI-Powered Legal Tools, Legal Tech, Law Automation, AI in Law, Legal Innovation, Ozco Studio, Python Projects">
+    <meta name="author" content="Ozkan Comert">
+
+    <!-- Open Graph (Facebook & LinkedIn) -->
+    <meta property="og:title" content="Mediation Fee Calculator - Ozco Studio">
+    <meta property="og:description" content="An AI-powered mediation fee calculator that simplifies legal fee calculations with smart automation.">
+    <meta property="og:image" content="https://ozco.studio/assets/projects/project3.png">
+    <meta property="og:url" content="https://ozco.studio/project3.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mediation Fee Calculator - Ozco Studio">
+    <meta name="twitter:description" content="An AI-powered mediation fee calculator that simplifies legal fee calculations with smart automation.">
+    <meta name="twitter:image" content="https://ozco.studio/assets/projects/project3.png">
+    <meta name="twitter:site" content="@ozcotech">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/icons/ozco-logo.png">
+
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -17,6 +39,10 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <header>
+        <h1 id="project-title" class="page-heading">Mediation Fee Calculator</h1>
+    </header>
 
     <div class="project-details-container">
         <img src="assets/projects/project3.png" alt="Mediation Project" class="project-detail-image">
