--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Ozco Studio - My personal portfolio website">
-    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer">
+    <meta name="keywords" content="Ozco, Portfolio, Technology, Developer, Coding, Web Development, Mediation, Mediation Fee Calculator, Legal Tech, AI-Powered Tools, Artificial Intelligence, Python Development, Legal Automation">
     <meta name="author" content="Ozkan Comert">
     <link rel="stylesheet" href="css/style.css">
 </head>
