Contact page updated: Logo added

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
     </nav>
 
     <h1>Contact Me</h1>
+
+    <div class="contact-logo">
+        <img src="ozco-logo.png" alt="Ozco Studio Logo">
+    </div>
+    
     <p>You can reach out to me via email or follow me on social media.</p>
 
     <div class="contact-info">
