Add dynamic content loading from JSON for index page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Hello, I'm Oz</h1>
-    <p>Welcome to my portfolio site. More content will be added soon..</p>
+    <h1 id="index-title">Loading...</h1>
+    <p id="index-description">Loading content...</p>
     <div class="motivational-quote">
-        <p>"Every line of code is a step toward a smarter world. Keep learning, keep building!"</p>
+        <p id="index-quote">Loading quote...</p>
     </div>
     <footer>
         <div class="footer-container">
