Added security status indicator showing secure/insecure connection.

--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,13 @@
                     <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
                 </a>
             </p>
+            <div class="security-info">
+                <span id="secure-connection">
+                    <img src="assets/icons/lock-icon.svg" alt="Secure Connection" class="security-icon">
+                    Secure Connection (SSL)
+                </span>
+                <span class="hosting-info">Hosted by GitHub Pages</span>
+            </div>
         </div>
     </footer>
     <script src="js/script.js" defer></script>
