Fixed footer layout to align content properly with three sections

--- a/about.html
+++ b/about.html
@@ -22,22 +22,26 @@
         </ul>
     </nav>
 
-    <!-- About Text Section -->
-    <h1 id="about-title"></h1>
-    <p id="about-content"></p>
+    <div class="content-wrapper">
+        <!-- About Text Section -->
+        <h1 id="about-title"></h1>
+        <p id="about-content"></p>
+    </div>
 
     <!-- Footer Section -->
     <footer>
         <div class="footer-container">
-            <p>© 2025 Ozco Studio. All rights reserved.</p>
-            <p>
+            <div class="footer-copyright">
+                © 2025 Ozco Studio. All rights reserved.
+            </div>
+            <div class="footer-social">
                 <a href="https://github.com/ozcotech" target="_blank">
                     <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
                 </a>
                 <a href="https://linkedin.com/in/ozcotech" target="_blank">
                     <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
                 </a>
-            </p>
+            </div>
             <div class="security-info">
                 <span id="secure-connection">
                     <img src="assets/icons/lock-icon.svg" alt="Secure Connection" class="security-icon">
