--- a/project3.html
+++ b/project3.html
@@ -76,15 +76,26 @@
     </div>
 
     <footer>
-        <p>© 2025 Ozco Studio. All rights reserved.</p>
-        <p>
-            <a href="https://github.com/ozcotech" target="_blank">
-                <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
-            </a>
-            <a href="https://linkedin.com/in/ozcotech" target="_blank">
-                <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
-            </a>
-        </p>
+        <div class="footer-container">
+            <div class="footer-copyright">
+                © 2025 Ozco Studio. All rights reserved.
+            </div>
+            <div class="footer-social">
+                <a href="https://github.com/ozcotech" target="_blank">
+                    <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
+                </a>
+                <a href="https://linkedin.com/in/ozcotech" target="_blank">
+                    <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
+                </a>
+            </div>
+            <div class="security-info">
+                <span id="secure-connection">
+                    <img src="assets/icons/lock-icon.svg" alt="Secure Connection" class="security-icon">
+                    Secure Connection (SSL)
+                </span>
+                <span class="hosting-info">Hosted by GitHub Pages</span>
+            </div>
+        </div>
     </footer>
     <script src="js/script.js" defer></script>
 </body>
