Updated project2 icon

--- a/project2.html
+++ b/project2.html
@@ -24,8 +24,7 @@
     </nav>
 
     <div class="project-details-container">
-        <img src="assets/projects/project2.png" alt="Word Editor Project" class="project-detail-image">
-        
+        <img src="assets/projects/project2_1.png" alt="SmartGuide Robot Project Fallback Image" class="project-detail-image">
         <div class="project-details-text"></div>
     </div>
 
